mobileWizard: remove unnecessary paddings (fixed overflow)
Reviewed-on: https://gerrit.libreoffice.org/c/online/+/89051
Tested-by: Pedro Pinto da Silva <pedro.silva@collabora.com>

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -183,7 +183,7 @@
 	.menuwizard #mobile-wizard-content > div .ui-widget {
 		padding-left: 0px !important;
 	}
-	#mobile-wizard-content > div .ui-widget,  #mobile-wizard:not(.menuwizard) #mobile-wizard-content > .ui-widget{
+	#mobile-wizard:not(.menuwizard) #mobile-wizard-content > .ui-header.level-0.mobile-wizard.ui-widget{
 		padding-left: 2% !important;
 		width: 100%;
 	}
